add idx in migration and fix name method in swagger
